--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.grp8.dhbwmultigradingtoolkit.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e102a" height="60.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="1055.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="90.0">
+      <image>
+         <Image backgroundLoading="true" url="@images/icon-instruction.png" />
+      </image>
+   </ImageView>
+      <Hyperlink contentDisplay="CENTER" layoutX="1130.0" layoutY="170.0" prefHeight="35.0" prefWidth="110.0" text="Anleitung" textFill="#666060" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="170.0">
+         <font>
+            <Font name="Arial" size="22.0" />
+         </font>
+      </Hyperlink>
+      <Label layoutX="626.0" layoutY="22.0" text="Multigrading-Tool" textAlignment="CENTER" textFill="#d9d9d9" AnchorPane.topAnchor="12.0">
+         <font>
+            <Font name="Arial Bold" size="32.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="60.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="350.0">
+      <image>
+         <Image backgroundLoading="true" url="@images/icon-info.png" />
+      </image>
+      </ImageView>
+      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="60.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="245.0">
+         <image>
+            <Image backgroundLoading="true" url="@images/icon-info.png" />
+         </image>
+      </ImageView>
+      <Label layoutY="245.0" text="Matrikeltabelle" textFill="#666060" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="245.0">
+         <font>
+            <Font name="Arial Bold" size="22.0" />
+         </font>
+      </Label>
+      <Label layoutX="120.0" layoutY="255.0" text="Prüfungsergebnistabelle" textFill="#666060" AnchorPane.topAnchor="350.0">
+         <font>
+            <Font name="Arial Bold" size="22.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
