--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/preview-matrikeltabelle.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/preview-matrikeltabelle.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.grp8.dhbwmultigradingtoolkit.PreviewMatrikeltabelle"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="550.0" prefWidth="924.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.PreviewMatrikeltabelle">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="40.0" layoutY="4.0" stroke="BLACK" strokeType="INSIDE" width="924.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ScrollBar layoutX="654.0" layoutY="122.0" orientation="VERTICAL" prefHeight="510.0" prefWidth="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+      <Label layoutX="330.0" layoutY="180.0" text="Vorschau der Matrikeltabelle" textFill="#d9d9d9" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="7.0">
+         <font>
+            <Font name="Arial Bold" size="22.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="33.0" fitWidth="40.0" layoutX="887.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image backgroundLoading="true" url="@images/icon-x.png" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
