--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,13 +9,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle id = "header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="1055.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="90.0">
       <image>
          <Image backgroundLoading="true" url="@images/icon-instruction.png" />
       </image>
    </ImageView>
-      <Label styleClass="file-output" contentDisplay="CENTER" layoutX="1136.0" layoutY="170.0" prefHeight="35.0" text="Anleitung" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="170.0">
+      <Label id="instruction" contentDisplay="CENTER" layoutX="1136.0" layoutY="170.0" prefHeight="35.0" text="Anleitung" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="170.0">
       </Label>
       <Label id="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
       </Label>
@@ -30,20 +29,20 @@
             <Image backgroundLoading="true" url="@images/icon-info.png" />
          </image>
       </ImageView>
-      <Label styleClass="table-name" layoutY="245.0" prefHeight="35.0"  text="Matrikeltabelle" textFill="#666060" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="245.0">
+      <Label layoutY="245.0" prefHeight="35.0" styleClass="table-name" text="Matrikeltabelle" textFill="#666060" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="245.0">
       </Label>
-      <Label styleClass="table-name" layoutX="120.0" layoutY="255.0" prefHeight="35.0" text="Prüfungsergebnistabelle" textFill="#666060" AnchorPane.topAnchor="350.0">
+      <Label layoutX="120.0" layoutY="255.0" prefHeight="35.0" styleClass="table-name" text="Prüfungsergebnistabelle" textFill="#666060" AnchorPane.topAnchor="350.0">
       </Label>
-      <Button styleClass="file-upload-button" contentDisplay="CENTER" layoutX="446.0" layoutY="347.0" minWidth="200.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="250.0" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="347.0">
+      <Button contentDisplay="CENTER" layoutX="446.0" layoutY="335.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="335.0">
       </Button>
-      <Button styleClass="file-upload-button" contentDisplay="CENTER" layoutX="446.0" layoutY="242.0" minWidth="200.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="250.0" text="Datei hochladen" textAlignment="CENTER">
+      <Button contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER">
       </Button>
-      <ImageView id="iconeye" fitHeight="35.0" fitWidth="35.0" layoutX="1040.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="iconeye" fitHeight="35.0" fitWidth="35.0" layoutX="1114.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/icon-eye.png" />
          </image>
       </ImageView>
-      <ImageView id="iconeye1" fitHeight="35.0" fitWidth="35.0" layoutX="1040.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="iconeye1" fitHeight="35.0" fitWidth="35.0" layoutX="1114.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@images/icon-eye.png" />
       </ImageView>
       <Button id="hochladen-button" layoutX="904.0" layoutY="610.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="325.0" text="Hochladen auf Moodle" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="50.66666666666674">
@@ -52,6 +51,9 @@
          <image>
             <Image url="@images/pic-dhbw.png" />
          </image>
+         
       </ImageView>
-   </children>
+      <Label layoutX="793.0" layoutY="249.0" styleClass="file-output" text="Matrikeltabelle.xlsx" />
+      <Label layoutX="793.0" layoutY="354.0" styleClass="file-output" text="Prüfungsergebnistabelle.xlsx" />
+        </children>
 </AnchorPane>
