--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
    <children>
       <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="1055.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="90.0">
-      <image>
-         <Image backgroundLoading="true" url="@images/icon-instruction.png" />
-      </image>
-   </ImageView>
-      <Button id="instruction" onAction="#openPdf" contentDisplay="CENTER" layoutX="1136.0" layoutY="170.0" prefHeight="35.0" text="Anleitung" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="170.0">
-      </Button>
+      <Label contentDisplay="CENTER" layoutX="1147.0" layoutY="170.0"  prefHeight="35.0" text="Anleitung" AnchorPane.rightAnchor="54.33333333333326" AnchorPane.topAnchor="170.0">
+      </Label>
       <Label id="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
       </Label>
       <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="60.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="350.0">
@@ -55,5 +48,12 @@
       </ImageView>
       <Label layoutX="793.0" layoutY="249.0" styleClass="file-output" text="Matrikeltabelle.xlsx" />
       <Label layoutX="793.0" layoutY="354.0" styleClass="file-output" text="Prüfungsergebnistabelle.xlsx" />
+      <Button fx:id="instruction" onAction="#openPdf" layoutX="1132.0" layoutY="75.0" mnemonicParsing="false">
+         <graphic>
+            <ImageView fitHeight="80" fitWidth="80" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/icon-instruction.png" />
+            </ImageView>
+         </graphic>
+      </Button>
         </children>
 </AnchorPane>
