Switched x-icons to x-buttons on previews

--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/preview-matrikeltabelle.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/preview-matrikeltabelle.fxml
@@ -15,10 +15,12 @@
             <Font name="Arial Bold" size="22.0" />
          </font>
       </Label>
-      <ImageView fitHeight="33.0" fitWidth="40.0" layoutX="887.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image backgroundLoading="true" url="@images/icon-x.png" />
-         </image>
-      </ImageView>
+      <Button fx:id="exit" layoutX="882.0" mnemonicParsing="false" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <graphic>
+            <ImageView fitHeight="31.0" fitWidth="31.0" layoutX="882.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/icon-x.png" />
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
