--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
@@ -19,6 +19,7 @@
     -fx-background-color: -fx-light-grey;
     -fx-text-fill: -fx-dark-grey;
     -fx-font-size: 16px;
+    -fx-background-radius: 25px;
 }
 
 .miniIcons {
