--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -11,8 +11,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
    <children>
       <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label contentDisplay="CENTER" layoutX="1147.0" layoutY="170.0" prefHeight="35.0" text="Anleitung" AnchorPane.rightAnchor="54.33333333333326" AnchorPane.topAnchor="170.0">
-      </Label>
       <Label id="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
       </Label>
       <Label layoutY="245.0" prefHeight="35.0" styleClass="table-name" text="Matrikeltabelle" textFill="#666060" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="245.0">
@@ -23,7 +21,7 @@
       </Button>
       <Button contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER">
       </Button>
-      <Button id="hochladen-button" layoutX="904.0" layoutY="610.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="325.0" text="Hochladen auf Moodle" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="50.66666666666674">
+      <Button id="moodle-upload-button" layoutX="904.0" layoutY="610.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="325.0" text="Hochladen auf Moodle" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="50.66666666666674">
       </Button>
       <ImageView fitHeight="109.0" fitWidth="290.0" layoutX="60.0" layoutY="510.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0">
          <image>
@@ -42,7 +40,7 @@
             <Tooltip styleClass="tooltip" text="Hier klicken zur Anleitung" />
          </tooltip>
       </Button>
-      <Button fx:id="previewMatrikel"  styleClass="miniIcons" layoutX="1114" layoutY="245.0" mnemonicParsing="false">
+      <Button fx:id="previewMatrikel" styleClass="miniIcons" onAction="#showPreviewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/icon-eye.png" />
