Add onAction-Attribute to the eye button that allows to call the function showPreviewExam in Controller.java when the eye button is clicked

--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -50,7 +50,7 @@
             <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle" />
          </tooltip>
       </Button>
-      <Button fx:id="previewExam" styleClass="miniIcons" layoutX="1114" layoutY="350.0" mnemonicParsing="false">
+      <Button fx:id="previewExam" styleClass="miniIcons" onAction="#showPreviewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/icon-eye.png" />
