--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -10,26 +10,41 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
    <children>
+      <!--header box-->
       <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+
+      <!--heading-->
       <Label id="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
       </Label>
+
+      <!--name of tables-->
       <Label layoutY="245.0" prefHeight="35.0" styleClass="table-name" text="Matrikeltabelle" textFill="#666060" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="245.0">
       </Label>
       <Label layoutX="120.0" layoutY="255.0" prefHeight="35.0" styleClass="table-name" text="Prüfungsergebnistabelle" textFill="#666060" AnchorPane.topAnchor="350.0">
       </Label>
+
+      <!--file upload button-->
       <Button contentDisplay="CENTER" layoutX="446.0" layoutY="335.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="335.0">
       </Button>
       <Button contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER">
       </Button>
+
+      <!--moodle upload button-->
       <Button id="moodle-upload-button" layoutX="904.0" layoutY="610.0" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="325.0" text="Hochladen auf Moodle" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="50.66666666666674">
       </Button>
+
+      <!--DHBW Logo-->
       <ImageView fitHeight="109.0" fitWidth="290.0" layoutX="60.0" layoutY="510.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0">
          <image>
             <Image url="@images/pic-dhbw.png" />
          </image>
       </ImageView>
+
+      <!--name of uploaded files-->
       <Label layoutX="793.0" layoutY="249.0" styleClass="file-output" text="Matrikeltabelle.xlsx" />
       <Label layoutX="793.0" layoutY="354.0" styleClass="file-output" text="Prüfungsergebnistabelle.xlsx" />
+
+      <!--button to call out usage instruction of tool-->
       <Button fx:id="instruction"  layoutX="1132.0" layoutY="75.0" mnemonicParsing="false" onAction="#openPdf">
          <graphic>
             <ImageView fitHeight="80" fitWidth="80" pickOnBounds="true" preserveRatio="true">
@@ -40,6 +55,8 @@
             <Tooltip styleClass="tooltip" text="Hier klicken zur Anleitung" />
          </tooltip>
       </Button>
+
+      <!--button to call out preview of Matrikeltabelle-->
       <Button fx:id="previewMatrikel" styleClass="miniIcons" onAction="#showPreviewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
@@ -50,6 +67,8 @@
             <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle" />
          </tooltip>
       </Button>
+
+      <!--button to call out preview of Notentabelle-->
       <Button fx:id="previewExam" styleClass="miniIcons" onAction="#showPreviewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
@@ -60,6 +79,8 @@
             <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle"/>
          </tooltip>
       </Button>
+
+      <!--info-icons to show the tool tips-->
       <Button fx:id="infoMatrikel" styleClass="miniIcons" layoutX="60" layoutY="245.0" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
