--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -14,7 +14,7 @@
       <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 
       <!--heading-->
-      <Label id="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
+      <Label styleClass="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
       </Label>
 
       <!--name of tables-->
