--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
@@ -43,12 +43,22 @@
 #instruction:hover{
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 10, 0.5, 0, 0);
 }
-#tool-name{
+.tool-name{
   -fx-text-fill: -fx-light-grey;
   -fx-text-transform: uppercase;
   -fx-font-weight: bolder;
   -fx-font-size: 32;
 }
+.login-toolname{
+    -fx-text-fill: -fx-light-grey;
+    -fx-text-transform: uppercase;
+    -fx-font-weight: bolder;
+    -fx-font-size: 25;
+}
+
+
+
+
 .file-output {
     -fx-font-style: italic;
 }
