--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,35 +8,44 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="290.0" prefWidth="288.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.LogIn">
     <children>
-        <GridPane prefHeight="290.0" prefWidth="521.0">
+        <GridPane layoutX="7.0" layoutY="-14.0" prefHeight="290.0" prefWidth="521.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="10.0" prefWidth="32.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="131.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="20.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="188.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="140.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="9.0" prefWidth="9.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="5.0" prefWidth="5.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="79.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="38.0" minHeight="9.0" prefHeight="9.0" vgrow="SOMETIMES" />
             </rowConstraints>
-        </GridPane>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="40.0" layoutY="-6.0" stroke="BLACK" strokeType="INSIDE" width="521.0" />
-        <Label layoutX="46.0" layoutY="87.0" prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Benutzername:">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-        </Label>
-        <Label layoutX="46.0" layoutY="155.0" prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Passwort:">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-        </Label>
-        <TextArea layoutX="206.0" layoutY="155.0" prefHeight="7.0" prefWidth="226.0" />
-        <TextArea layoutX="206.0" layoutY="78.0" prefHeight="44.0" prefWidth="226.0" />
+         <children>
+            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+              <TextArea prefHeight="64.0" prefWidth="292.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+              <TextArea prefHeight="0.0" prefWidth="226.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="1" GridPane.rowIndex="4">
+             </Button>
+              <Label prefHeight="35.0" prefWidth="174.0" styleClass="tableNameForLogin" text="Benutzername:" GridPane.columnIndex="1" GridPane.rowIndex="2">
 
-        <Label layoutX="152.0" layoutY="-2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="-2.0" />
+              </Label>
+              <Label prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Passwort:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                
+              </Label>
+         </children>
+        </GridPane>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" layoutY="-6.0" stroke="BLACK" strokeType="INSIDE" width="528.0" />
+
+        <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
+
     </children>
 </AnchorPane>
