--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -13,13 +13,13 @@
     <children>
         <GridPane layoutX="7.0" layoutY="-14.0" prefHeight="290.0" prefWidth="521.0">
             <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="10.0" prefWidth="32.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="131.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="20.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="188.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="140.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="9.0" prefWidth="9.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="5.0" prefWidth="5.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="10.0" prefWidth="31.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="132.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="16.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.0" minWidth="10.0" prefWidth="203.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="0.0" prefWidth="0.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="136.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="3.0" prefWidth="3.0" />
             </columnConstraints>
             <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -30,7 +30,7 @@
             <RowConstraints maxHeight="38.0" minHeight="9.0" prefHeight="9.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
-            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="5" GridPane.rowIndex="4" />
               <TextArea prefHeight="64.0" prefWidth="292.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
               <TextArea prefHeight="0.0" prefWidth="226.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
              <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -43,7 +43,7 @@
               </Label>
          </children>
         </GridPane>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" layoutY="-6.0" stroke="BLACK" strokeType="INSIDE" width="528.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" layoutY="-6.0" width="528.0" />
 
         <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
 
