--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -13,37 +13,48 @@
     <children>
         <GridPane layoutX="7.0" layoutY="-14.0" prefHeight="290.0" prefWidth="521.0">
             <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="10.0" prefWidth="31.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="132.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="16.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.0" minWidth="10.0" prefWidth="203.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="0.0" prefWidth="0.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="136.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="0.0" prefWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="0.0" prefWidth="18.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="0.0" prefWidth="45.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="130.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="0.0" prefWidth="0.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.0" minWidth="10.0" prefWidth="120.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="0.0" prefWidth="17.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="167.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="15.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="3.0" prefWidth="3.0" />
             </columnConstraints>
             <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="79.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="9.0" prefHeight="9.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="79.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="81.0" minHeight="0.0" prefHeight="37.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="78.0" minHeight="9.0" prefHeight="48.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
-            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-              <TextArea prefHeight="64.0" prefWidth="292.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-              <TextArea prefHeight="0.0" prefWidth="226.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+             <Rectangle height="70.0" styleClass="rounded-rectangle" width="495.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Rectangle height="69.0" styleClass="rounded-rectangle" width="493.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+
+             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="178.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
              </Button>
-              <Label prefHeight="35.0" prefWidth="174.0" styleClass="tableNameForLogin" text="Benutzername:" GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <Label prefHeight="35.0" prefWidth="174.0" styleClass="tableNameForLogin" text="Benutzername:" GridPane.columnIndex="3" GridPane.rowIndex="2">
 
               </Label>
-              <Label prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Passwort:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+              <Label prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Passwort:" GridPane.columnIndex="3" GridPane.rowIndex="4">
                 
               </Label>
+            <TextArea minWidth="-Infinity" prefHeight="64.0" prefWidth="294.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <TextArea minWidth="-Infinity" prefHeight="66.0" prefWidth="294.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+
          </children>
         </GridPane>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" layoutY="-6.0" width="528.0" />
+
 
         <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
 
