--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -39,7 +40,6 @@
              <Rectangle height="70.0" styleClass="rounded-rectangle" width="495.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Rectangle height="69.0" styleClass="rounded-rectangle" width="493.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-
              <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="178.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
              </Button>
               <Label prefHeight="35.0" prefWidth="174.0" styleClass="tableNameForLogin" text="Benutzername:" GridPane.columnIndex="3" GridPane.rowIndex="2">
@@ -53,10 +53,11 @@
 
          </children>
         </GridPane>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" layoutY="-6.0" width="528.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" width="528.0" />
 
-
-        <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
+      
+              <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
+      <PasswordField styleClass="passwort-input" layoutX="220.0" layoutY="145.0" stylesheets="@style.css" />
 
     </children>
 </AnchorPane>
